<resources>
    <string name="app_name">CartelerAPP Final</string>
    <string name="title_activity_nav__drawer__home">Nav_Drawer_Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_movies">Menu_movies</string>
    <string name="menu_theatre">Theatre</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>

</resources>
