<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cartelerappfinal.Fragments.MovieFragment"
        android:label="@string/menu_movies"
        tools:layout="@layout/menu_fragment_movie" />

    <fragment
        android:id="@+id/nav_theatres"
        android:name="com.example.cartelerappfinal.Fragments.TheatreFragment"
        android:label="@string/menu_theatre"
        tools:layout="@layout/menu_fragment_theatre" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.cartelerappfinal.Fragments.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/menu_fragment_profile" />


    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.cartelerappfinal.Fragments.MovieFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/menu_fragment_movie" />


</navigation>